--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-image": "PolymerElements/iron-image#^1.2.5",
     "neon-animation": "PolymerElements/neon-animation#^1.2.2",
-    "app-route": "PolymerElements/app-route#^0.9.2"
+    "app-route": "PolymerElements/app-route#^0.9.2",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5"
   }
 }
