--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "iron-image": "PolymerElements/iron-image#^1.2.5",
     "neon-animation": "PolymerElements/neon-animation#^1.2.2",
     "app-route": "PolymerElements/app-route#^0.9.2",
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5"
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.22"
   }
 }
