--- a/firebase.json
+++ b/firebase.json
@@ -3,11 +3,7 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": ".",
-    "ignore": [
-      ".*",
-      "*.json"
-    ],
+    "public": ["build/bundled", "img"],
     "rewrites": [
       {
         "source": "/main",
