--- a/firebase.json
+++ b/firebase.json
@@ -3,29 +3,15 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": ".",
-    "ignore": [
-      "bower_components",
-      "src",
-      ".firebaserc",
-      ".gitignore",
-      "bower.json",
-      "index.html",
-      "polymer.json",
-      "README.md"
-    ],
+    "public": "/build/bundled",
     "rewrites": [
       {
         "source": "/main",
-        "destination": "build/bundled/index.html"
+        "destination": "index.html"
       },
       {
         "source": "/project/*",
-        "destination": "build/bundled/index.html"
-      },
-      {
-        "source": "/",
-        "destination": "build/bundled/index.html"
+        "destination": "index.html"
       }
     ]
   }
