--- a/firebase.json
+++ b/firebase.json
@@ -3,15 +3,15 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "/build/bundled",
+    "public": "build/bundled/",
     "rewrites": [
       {
         "source": "/main",
-        "destination": "index.html"
+        "destination": "/index.html"
       },
       {
         "source": "/project/*",
-        "destination": "index.html"
+        "destination": "/index.html"
       }
     ]
   }
