--- a/bower.json
+++ b/bower.json
@@ -14,12 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-    "iron-image": "PolymerElements/iron-image#^1.2.5",
-    "neon-animation": "PolymerElements/neon-animation#^1.2.2",
-    "app-route": "PolymerElements/app-route#^0.9.2",
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0.5",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.22"
+    "polymer": "Polymer/polymer#2.0-preview",
+    "app-route": "PolymerElements/app-route#2.0-preview",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1"
   }
 }
