--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "polymer": "Polymer/polymer#2.0-preview",
     "app-route": "PolymerElements/app-route#2.0-preview",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1",
+    "iron-image": "PolymerElements/iron-image#2.0-preview",
+    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
+    "marked-element": "PolymerElements/marked-element#2.0-preview"
   }
 }
