--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#v1",
     "iron-image": "PolymerElements/iron-image#2.0-preview",
     "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "marked-element": "PolymerElements/marked-element#2.0-preview"
+    "marked-element": "PolymerElements/marked-element#2.0-preview",
+    "smoothscroll": "^0.3.4"
   }
 }
