build rules and font faster

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "display": "standalone",
   "default_locale": "en",
   "icons": {
-    "256": "src/img/favicon.ico"
+    "256": "assets/img/favicon.ico"
   }
 }
