--- a/bower.json
+++ b/bower.json
@@ -14,8 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#2.0-preview",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1",
+    "polymer": "Polymer/polymer#2.0.0-rc.3",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0-rc.5",
     "iron-image": "PolymerElements/iron-image#2.0-preview",
     "iron-pages": "PolymerElements/iron-pages#2.0-preview",
     "marked-element": "PolymerElements/marked-element#2.0-preview",
