--- a/manifest.json
+++ b/manifest.json
@@ -6,9 +6,21 @@
   "default_locale": "en",
   "background_color": "#000000",
   "theme_color": "#000000",
-  "icons": {
-    "144": "/assets/img/favicon144.png",
-    "192": "/assets/img/favicon192.png",
-    "256": "/assets/img/favicon255.png"
-  }
+  "icons": [
+    {
+      "src": "/assets/img/favicon144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/img/favicon192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/img/favicon256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    }
+  ]
 }
