--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,6 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#2.0.0-rc.3",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0-rc.5",
-    "iron-image": "PolymerElements/iron-image#2.0-preview",
-    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
-    "marked-element": "PolymerElements/marked-element#2.0-preview",
-    "web-animations-js": "^2.2.2",
-    "app-route": "PolymerElements/app-route#2.0-preview"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0-rc.5"
   }
 }
