--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#2.0.0-rc.3",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0-rc.5"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#v1.0.0-rc.5",
+    "iron-location": "PolymerElements/iron-location#2.0-preview",
+    "iron-pages": "PolymerElements/iron-pages#2.0-preview",
+    "marked-element": "PolymerElements/marked-element#2.0-preview"
   }
 }
