--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "default_locale": "en",
-  "background_color": "#000000",
+  "background_color": "#FFFFFF",
   "theme_color": "#000000",
   "icons": [
     {
