--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^3.3.4000"
   },
   "dependencies": {
-    "lit-element": "^2.1.0"
+    "lit-element": "^2.1.0",
+    "pwa-helpers": "^0.9.1"
   }
 }
