--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "me@elliottmarquez.dev",
   "license": "MIT",
   "devDependencies": {
+    "@types/redux": "^3.6.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
