--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./lib",
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "pretty": true,
-    "sourceMap": true,
-    "strict": true,
-    "target": "es2017",
     "experimentalDecorators": true
   },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts",
-    "custom_typings/**/*.d.ts",
-  ],
-  "exclude": [
-    "test/fixtures/**/*.*",
-    "node_modules/**/*"
-  ]
+  "moduleResolution": "node"
 }
