--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,21 @@
 node_modules
-build
-lib/
-.DS_Store
-build/**
 firebase-debug.log
 .firebase/
+
+# build output
+dist
+
+# dependencies
+.snowpack/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# environment variables
+.env
+.env.production
+
+# macOS-specific files
+.DS_Store
