--- a/firebase.json
+++ b/firebase.json
@@ -1,14 +1,6 @@
 {
-  "database": {
-    "rules": "database.rules.json"
-  },
   "hosting": {
-    "public": "build/default",
-    "rewrites": [
-      {
-        "source": "/**",
-        "destination": "/index.html"
-      }
-    ]
+    "public": "dist",
+    "ignore": []
   }
 }
