--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "astro build"
   },
   "devDependencies": {
-    "@astrojs/renderer-lit": "^0.1.1",
-    "astro": "^0.20.7"
+    "@astrojs/renderer-lit": "^0.2.1",
+    "astro": "^0.21.13"
   },
   "dependencies": {
-    "lit": "*"
+    "lit": "^2.0.2"
   }
 }
