--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "astro dev",
-    "build": "astro build"
+    "dev": "astro dev",
+    "build": "astro build --experimental-static-build",
+    "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-lit": "^0.2.1",
-    "astro": "^0.21.13"
+    "@astrojs/renderer-lit": "^0.3.1",
+    "astro": "^0.22.20"
   },
   "dependencies": {
-    "lit": "^2.0.2"
+    "lit": "^2.1.2"
   }
 }
